--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,14 @@
-name: copier
+name: file_copy
 description: Package for copy files, directories, links. You can watch the copying process.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/GlebBatykov/file_copy
 
 environment:
   sdk: ">=2.12.0"
 
 topics:
-  - files
+  - file
+  - directory
   - copy
 
 dev_dependencies:
