--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: file_copy
 description: Package for copy files, directories, links. You can watch the copying process.
-version: 1.0.0
+version: 1.0.1
 repository: https://github.com/GlebBatykov/file_copy
 
 environment:
-  sdk: ">=2.12.0"
+  sdk: ">=2.12.0 <4.0.0"
 
 topics:
   - file
